# serializer version: 1
# name: test_dataset_view_filter_contents
  '''
  Index(timeline:log_tick)
  Index(timeline:log_time)
  Index(timeline:time_1)
  Index(timeline:time_2)
  Index(timeline:time_3)
  Column name: /obj1:Points3D:positions
  	Entity path: /obj1
  	Archetype: rerun.archetypes.Points3D
  	Component type: rerun.components.Position3D
  	Component: Points3D:positions
  Column name: /obj2:Points3D:positions
  	Entity path: /obj2
  	Archetype: rerun.archetypes.Points3D
  	Component type: rerun.components.Position3D
  	Component: Points3D:positions
  Column name: /obj3:Points3D:positions
  	Entity path: /obj3
  	Archetype: rerun.archetypes.Points3D
  	Component type: rerun.components.Position3D
  	Component: Points3D:positions
  Column name: /text1:TextDocument:text
  	Entity path: /text1
  	Archetype: rerun.archetypes.TextDocument
  	Component type: rerun.components.Text
  	Component: TextDocument:text
  	Static: true
  Column name: /text2:TextDocument:text
  	Entity path: /text2
  	Archetype: rerun.archetypes.TextDocument
  	Component type: rerun.components.Text
  	Component: TextDocument:text
  	Static: true
  '''
# ---
# name: test_dataset_view_filter_contents.1
  '''
  Index(timeline:log_tick)
  Index(timeline:log_time)
  Index(timeline:time_1)
  Index(timeline:time_2)
  Index(timeline:time_3)
  Column name: /obj1:Points3D:positions
  	Entity path: /obj1
  	Archetype: rerun.archetypes.Points3D
  	Component type: rerun.components.Position3D
  	Component: Points3D:positions
  '''
# ---
# name: test_dataset_view_reader
  '''
  ┌──────────────────────────────────┬────────────────────┬─────────────────────────────┬───────────────────────────────┬──────────────────────────────┬──────────────────────┬─────────────────────────────────────────────────────┐
  │ rerun_segment_id                 ┆ time_3             ┆ time_2                      ┆ time_1                        ┆ log_time                     ┆ log_tick             ┆ /obj1:Points3D:positions                            │
  │ ---                              ┆ ---                ┆ ---                         ┆ ---                           ┆ ---                          ┆ ---                  ┆ ---                                                 │
  │ type: Utf8                       ┆ type: nullable i64 ┆ type: nullable Duration(ns) ┆ type: nullable Timestamp(ns)  ┆ type: nullable Timestamp(ns) ┆ type: nullable i64   ┆ type: nullable List[nullable FixedSizeList[f32; 3]] │
  │                                  ┆ index_name: time_3 ┆ index_name: time_2          ┆ index_name: time_1            ┆ index_name: log_time         ┆ index_name: log_tick ┆ archetype: Points3D                                 │
  │                                  ┆ kind: index        ┆ kind: index                 ┆ kind: index                   ┆ kind: index                  ┆ kind: index          ┆ component: Points3D:positions                       │
  │                                  ┆                    ┆                             ┆                               ┆                              ┆                      ┆ component_type: Position3D                          │
  │                                  ┆                    ┆                             ┆                               ┆                              ┆                      ┆ entity_path: /obj1                                  │
  │                                  ┆                    ┆                             ┆                               ┆                              ┆                      ┆ kind: data                                          │
  ╞══════════════════════════════════╪════════════════════╪═════════════════════════════╪═══════════════════════════════╪══════════════════════════════╪══════════════════════╪═════════════════════════════════════════════════════╡
  │ 141a866deb2d49f69eb3215e8a404ffc ┆ 46                 ┆ PT12900S                    ┆ 2024-01-15T10:30:45.123456789 ┆ 2025-11-03T20:35:21.079952   ┆ 25                   ┆ [[1.0, 0.0, 0.0]]                                   │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ 141a866deb2d49f69eb3215e8a404ffc ┆ 6                  ┆ PT12000S                    ┆ 2024-01-15T10:32:45.123456789 ┆ 2025-11-03T20:35:21.080080   ┆ 34                   ┆ [[2.0, 0.0, 0.0]]                                   │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ 141a866deb2d49f69eb3215e8a404ffc ┆ 30                 ┆ PT9900S                     ┆ 2024-01-15T10:34:45.123456789 ┆ 2025-11-03T20:35:21.080980   ┆ 96                   ┆ [[3.0, 0.0, 0.0]]                                   │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ 141a866deb2d49f69eb3215e8a404ffc ┆ 50                 ┆ PT1800S                     ┆ 2024-01-15T10:36:45.123456789 ┆ 2025-11-03T20:35:21.080836   ┆ 86                   ┆ [[4.0, 0.0, 0.0]]                                   │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ 141a866deb2d49f69eb3215e8a404ffc ┆ 15                 ┆ PT4200S                     ┆ 2024-01-15T10:38:45.123456789 ┆ 2025-11-03T20:35:21.080180   ┆ 41                   ┆ [[5.0, 0.0, 0.0]]                                   │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ 141a866deb2d49f69eb3215e8a404ffc ┆ 9                  ┆ PT13500S                    ┆ 2024-01-15T10:40:45.123456789 ┆ 2025-11-03T20:35:21.080997   ┆ 97                   ┆ [[6.0, 0.0, 0.0]]                                   │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ 141a866deb2d49f69eb3215e8a404ffc ┆ 47                 ┆ PT11400S                    ┆ 2024-01-15T10:42:45.123456789 ┆ 2025-11-03T20:35:21.080037   ┆ 31                   ┆ [[7.0, 0.0, 0.0]]                                   │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ 141a866deb2d49f69eb3215e8a404ffc ┆ null               ┆ PT9000S                     ┆ 2024-01-15T10:44:45.123456789 ┆ 2025-11-03T20:35:21.080362   ┆ 54                   ┆ [[8.0, 0.0, 0.0]]                                   │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ 141a866deb2d49f69eb3215e8a404ffc ┆ 27                 ┆ null                        ┆ 2024-01-15T10:48:45.123456789 ┆ 2025-11-03T20:35:21.080779   ┆ 82                   ┆ [[10.0, 0.0, 0.0]]                                  │
  ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
  │ 141a866deb2d49f69eb3215e8a404ffc ┆ 10                 ┆ PT3300S                     ┆ 2024-01-15T10:52:45.123456789 ┆ 2025-11-03T20:35:21.080635   ┆ 72                   ┆ [[12.0, 0.0, 0.0]]                                  │
  └──────────────────────────────────┴────────────────────┴─────────────────────────────┴───────────────────────────────┴──────────────────────────────┴──────────────────────┴─────────────────────────────────────────────────────┘
  Data truncated due to size.
  '''
# ---
